# swagger/swagger.yml
@@ -16,35 +16,118 @@ paths:
     get:
       tags:
       - test
+      description: |-
+        获取所有测试数据
+        <br>
+      operationId: TestController.获取所有测试数据
+      responses:
+        "200":
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.Test'
+        "500":
+          description: 获取数据失败
     post:
       tags:
       - test
       description: |-
-        创建test
+        创建一条测试数据
         <br>
-      operationId: TestController.创建test
+      operationId: TestController.创建测试数据
       parameters:
       - in: body
         name: body
-        description: body for test content
+        description: 传入的测试数据
+        required: true
+        schema:
+          $ref: '#/definitions/models.Test'
+      responses:
+        "201":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Test'
+        "400":
+          description: 请求体格式错误
+        "500":
+          description: 创建数据失败
+  /test/{id}:
+    get:
+      tags:
+      - test
+      description: |-
+        根据ID获取单条测试数据
+        <br>
+      operationId: TestController.获取指定测试数据
+      parameters:
+      - in: path
+        name: id
+        description: 测试数据ID
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Test'
+        "400":
+          description: 无效的ID
+        "404":
+          description: 数据不存在
+    put:
+      tags:
+      - test
+      description: |-
+        更新指定ID的测试数据
+        <br>
+      operationId: TestController.更新测试数据
+      parameters:
+      - in: path
+        name: id
+        description: 测试数据ID
+        required: true
+        type: integer
+        format: int64
+      - in: body
+        name: body
+        description: 更新后的测试数据
         required: true
         schema:
           $ref: '#/definitions/models.Test'
       responses:
         "200":
-          description: '{int} models.User'
-        "403":
-          description: body is empty
-  /test/{id}:
-    get:
-      tags:
-      - test
-    put:
-      tags:
-      - test
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Test'
+        "400":
+          description: 请求体格式错误
+        "404":
+          description: 数据不存在
+        "500":
+          description: 更新失败
     delete:
       tags:
       - test
+      description: |-
+        根据ID删除测试数据
+        <br>
+      operationId: TestController.删除测试数据
+      parameters:
+      - in: path
+        name: id
+        description: 测试数据ID
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "204":
+          description: '{string} 空'
+        "400":
+          description: 无效的ID
+        "404":
+          description: 数据不存在
 definitions:
   models.Test:
     title: Test
